--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,6 @@
 #Grails Metadata file
-#Fri May 31 08:49:23 CEST 2013
-app.grails.version=2.1.5
+#Tue Sep 30 22:05:24 IST 2014
+app.grails.version=2.3.7
 app.name=airport
+app.servlet.version=2.5
 app.version=0.1
